工事中ページを追加し、各ページを仮実装した

--- a/ClientApp/coffeebook/src/app/main/main.component.html
+++ b/ClientApp/coffeebook/src/app/main/main.component.html
@@ -10,7 +10,7 @@
   <div class="message">
     <p>
       少しの違いで味が変わる、奥深いコーヒーの世界。<br>
-      淹れたコーヒーのレシピを記録して、自分の味を作っていこう。
+      淹れたコーヒーのレシピを記録して、自分の味を作りましょう。
     </p>
   </div>
 
@@ -21,17 +21,17 @@
 
     <div class="card-container">
 
-      <a class="card">
+      <a class="card" routerLink="/record/drip">
         <img src="../assets/illust-ya/coffee_paper_drip.png" width="48" height="48" alt="ドリッパーとコーヒーサーバー">
         <span>ドリップ</span>
       </a>
 
-      <a class="card">
+      <a class="card" routerLink="/under-construction">
         <img src="../assets/illust-ya/press_tea_maker.png" width="48" height="48" alt="フレンチプレス">
         <span>フレンチプレス</span>
       </a>
 
-      <a class="card">
+      <a class="card" routerLink="/under-construction">
         <img src="../assets/illust-ya/espresso_maker.png" width="48" height="48" alt="エスプレッソマシン">
         <span>エスプレッソ</span>
       </a>
@@ -46,12 +46,12 @@
 
     <div class="card-container">
 
-      <a class="card">
+      <a class="card" routerLink="/browse/by-conditions">
         <img src="../assets/illust-ya/search_mushimegane.png" width="48" height="48" alt="虫眼鏡">
         <span>条件から探す</span>
       </a>
 
-      <a class="card">
+      <a class="card" routerLink="/under-construction">
         <img src="../assets/illust-ya/yuenchi_teacup.png" width="48" height="48" alt="コーヒーカップ">
         <span>気分から探す</span>
       </a>
