--- a/ClientApp/coffeebook/src/app/toolbar/toolbar.component.html
+++ b/ClientApp/coffeebook/src/app/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <div class="toolbar" role="banner">
   <div class="title">
-    <h1>Coffeebook</h1>
+    <h1 routerLink="/main">Coffeebook</h1>
   </div>
   <div class="spacer"></div>
   <div class="login">
