--- a/ClientApp/coffeebook/src/app/record/record.component.scss
+++ b/ClientApp/coffeebook/src/app/record/record.component.scss
@@ -8,6 +8,10 @@ h6 {
   margin: 8px 0;
 }
 
+.message {
+  text-align: center;
+}
+
 .content {
   display: flex;
   margin: 32px auto;
@@ -15,22 +19,6 @@ h6 {
   max-width: 960px;
   flex-direction: column;
   align-items: center;
-}
-
-.menu-container {
-  display: flex;
-  // margin: 32px auto;
-  // padding: 0 16px;
-  // max-width: 960px;
-  flex-direction: column;
-  align-items: center;
-}
-
-.card-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-top: 16px;
 }
 
 .card {
@@ -111,4 +99,81 @@ svg#clouds {
   left: -230px;
   z-index: -10;
   width: 1920px;
+}
+
+form {
+  /* フォームをページの中央に置く */
+  margin: 32px auto;
+  width: 400px;
+  /* フォームの範囲がわかるようにする */
+  // padding: 1em;
+  // border: 1px solid #CCC;
+  // border-radius: 1em;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+form li + li {
+  margin-top: 1em;
+}
+
+label {
+  /* すべてのラベルを同じサイズにして、きちんと揃える */
+  display: inline-block;
+  width: 90px;
+  text-align: right;
+  margin-right: 10px;
+}
+
+input, textarea {
+  /* すべてのテキストフィールドのフォント設定を一致させる
+     デフォルトで、textarea は等幅フォントが設定されている */
+  font: 1em "Yu Gothic UI", sans-serif;
+
+  /* すべてのテキストフィールドを同じサイズにする */
+  width: 300px;
+  box-sizing: border-box;
+
+  /* テキストフィールドのボーダーの外見を同一にする */
+  border: 1px solid #999;
+}
+
+input:focus,
+textarea:focus {
+  /* アクティブな要素を少し強調する */
+  border-color: #000;
+}
+
+textarea {
+  /* 複数行のテキストフィールドをラベルにきちんと揃える */
+  vertical-align: top;
+
+  /* テキスト入力に十分な領域を与える */
+  height: 5em;
+}
+
+.button {
+  /* ボタンを他のテキストフィールドと同じ場所に置く */
+  padding-left: 90px; /* label 要素と同じサイズ */
+}
+
+button {
+  /* このマージンは、ラベルとテキストフィールドの間のスペースと
+     おおよそ同じスペースを表す */
+  margin-left: .5em;
+}
+
+.submit-button {
+  display: flex;
+  justify-content: center;
+  margin: 32px auto;
+
+  input {
+    width: 240px;
+    cursor: pointer;
+  }
 }
