--- a/ClientApp/coffeebook/src/app/component/toolbar/toolbar.component.html
+++ b/ClientApp/coffeebook/src/app/component/toolbar/toolbar.component.html
@@ -3,7 +3,10 @@
     <h1 routerLink="/main">Coffeebook</h1>
   </div>
   <div class="spacer"></div>
-  <div class="login">
+  <div class="button">
     <input type="button" value="ログイン" onclick="">
+  </div>
+  <div class="button">
+    <input type="button" value="会員登録" onclick="">
   </div>
 </div>
