--- a/ClientApp/coffeebook/src/app/component/under-construction/under-construction.component.html
+++ b/ClientApp/coffeebook/src/app/component/under-construction/under-construction.component.html
@@ -5,7 +5,7 @@
 
   <!-- メッセージ -->
   <div class="message">
-    <img src="../assets/illust-ya/mark_koujichu.png" width="360" height="360" alt="工事中の標識">
+    <img src="../../../assets/illust-ya/mark_koujichu.png" width="360" height="360" alt="工事中の標識">
     <p>
       このページは工事中です。
     </p>
