--- a/ClientApp/coffeebook/src/app/component/main/main.component.html
+++ b/ClientApp/coffeebook/src/app/component/main/main.component.html
@@ -22,17 +22,17 @@
     <div class="card-container">
 
       <a class="card" routerLink="/record/drip">
-        <img src="../assets/illust-ya/coffee_paper_drip.png" width="48" height="48" alt="ドリッパーとコーヒーサーバー">
+        <img src="../../../assets/illust-ya/coffee_paper_drip.png" width="48" height="48" alt="ドリッパーとコーヒーサーバー">
         <span>ドリップ</span>
       </a>
 
       <a class="card" routerLink="/under-construction">
-        <img src="../assets/illust-ya/press_tea_maker.png" width="48" height="48" alt="フレンチプレス">
+        <img src="../../../assets/illust-ya/press_tea_maker.png" width="48" height="48" alt="フレンチプレス">
         <span>フレンチプレス</span>
       </a>
 
       <a class="card" routerLink="/under-construction">
-        <img src="../assets/illust-ya/espresso_maker.png" width="48" height="48" alt="エスプレッソマシン">
+        <img src="../../../assets/illust-ya/espresso_maker.png" width="48" height="48" alt="エスプレッソマシン">
         <span>エスプレッソ</span>
       </a>
 
@@ -47,12 +47,12 @@
     <div class="card-container">
 
       <a class="card" routerLink="/browse/by-conditions">
-        <img src="../assets/illust-ya/search_mushimegane.png" width="48" height="48" alt="虫眼鏡">
+        <img src="../../../assets/illust-ya/search_mushimegane.png" width="48" height="48" alt="虫眼鏡">
         <span>条件から探す</span>
       </a>
 
       <a class="card" routerLink="/under-construction">
-        <img src="../assets/illust-ya/yuenchi_teacup.png" width="48" height="48" alt="コーヒーカップ">
+        <img src="../../../assets/illust-ya/yuenchi_teacup.png" width="48" height="48" alt="コーヒーカップ">
         <span>気分から探す</span>
       </a>
 
