--- a/ClientApp/coffeebook/src/app/component/tips/tips.component.html
+++ b/ClientApp/coffeebook/src/app/component/tips/tips.component.html
@@ -3,5 +3,5 @@
   <div class="balloon">
     <p>豆知識工事中</p>
   </div>-->
-  <img src="../assets/illust-ya/job_barista_woman.png" width="151" height="200" alt="バリスタの女性">
+  <img src="../../../assets/illust-ya/job_barista_woman.png" width="151" height="200" alt="バリスタの女性">
 </div>
