画像のパスを修正、工事中の画像をSVGアイコンへ差し替え

--- a/ClientApp/coffeebook/src/app/component/under-construction/under-construction.component.html
+++ b/ClientApp/coffeebook/src/app/component/under-construction/under-construction.component.html
@@ -5,7 +5,32 @@
 
   <!-- メッセージ -->
   <div class="message">
-    <img src="../../../assets/illust-ya/mark_koujichu.png" width="360" height="360" alt="工事中の標識">
+    <!-- iconboxの素材 -->
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+      <defs>
+        <style>
+          .a, .b {
+            fill: none;
+            stroke: #000;
+            stroke-linecap: round;
+            stroke-width: 2px;
+          }
+
+          .a {
+            stroke-miterlimit: 10;
+          }
+
+          .b {
+            stroke-linejoin: round;
+          }
+        </style>
+      </defs>
+      <title>icn_7</title>
+      <line class="a" x1="24" y1="21" x2="24" y2="29"/>
+      <line class="a" x1="24" y1="33" x2="24" y2="33"/>
+      <path class="b" d="M6.7943,38.2842,23.134,9.9834a1,1,0,0,1,1.732,0l16.34,28.3008a1,1,0,0,1-.866,1.5H7.66A1,1,0,0,1,6.7943,38.2842Z"/>
+      <path class="b" d="M21.4019,4.9833,1.5981,39.2846a3,3,0,0,0,2.5981,4.5H43.8038a3,3,0,0,0,2.5981-4.5L26.5981,4.9833A3,3,0,0,0,21.4019,4.9833Z"/>
+    </svg>
     <p>
       このページは工事中です。
     </p>
