--- a/ClientApp/coffeebook/src/app/component/main/main.component.scss
+++ b/ClientApp/coffeebook/src/app/component/main/main.component.scss
@@ -4,27 +4,6 @@
   text-align: center;
 }
 
-.content {
-  display: flex;
-  margin: 32px auto;
-  padding: 0 16px;
-  max-width: 960px;
-  flex-direction: column;
-  align-items: center;
-}
-
-.menu-container {
-  display: flex;
-  margin-top: 32px;
-  flex-direction: column;
-  align-items: center;
-
-  h2 {
-    margin: 0;
-    padding: 0;
-  }
-}
-
 a,
 a:visited,
 a:hover {
@@ -32,7 +11,7 @@ a:hover {
 }
 
 a:hover {
-  color: brown;
+  color: #96692F;
 }
 
 app-tips {
