--- a/ClientApp/coffeebook/src/styles.scss
+++ b/ClientApp/coffeebook/src/styles.scss
@@ -8,6 +8,27 @@ h6 {
   margin: 8px 0;
 }
 
+.content {
+  display: flex;
+  margin: 32px auto;
+  padding: 0 16px;
+  max-width: 960px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.menu-container {
+  display: flex;
+  margin-top: 32px;
+  flex-direction: column;
+  align-items: center;
+
+  h2 {
+    margin: 0;
+    padding: 0;
+  }
+}
+
 .card-container {
   display: flex;
   flex-wrap: wrap;
