--- a/ClientApp/coffeebook/src/app/component/under-construction/under-construction.component.scss
+++ b/ClientApp/coffeebook/src/app/component/under-construction/under-construction.component.scss
@@ -1,12 +1,4 @@
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 8px 0;
-}
+@import '../../../styles.scss';
 
 .content {
   display: flex;
@@ -25,12 +17,4 @@ h6 {
   p {
     font-size: 24px;
   }
-}
-
-svg#clouds {
-  position: fixed;
-  bottom: -160px;
-  left: -230px;
-  z-index: -10;
-  width: 1920px;
 }
