Azureの静的ホストのフラット階層に対応するため、画像のソースを環境変数に設定したベースURLから生成するように修正した

--- a/ClientApp/coffeebook/src/app/component/tips/tips.component.html
+++ b/ClientApp/coffeebook/src/app/component/tips/tips.component.html
@@ -3,5 +3,5 @@
   <div class="balloon">
     <p>豆知識工事中</p>
   </div>-->
-  <img src="../../../assets/img/irasutoya/job_barista_woman.png" width="151" height="200" alt="バリスタの女性">
+  <img [src]="srcBarista" width="151" height="200" alt="バリスタの女性">
 </div>
