--- a/ClientApp/coffeebook/src/app/component/record/record.component.html
+++ b/ClientApp/coffeebook/src/app/component/record/record.component.html
@@ -17,35 +17,35 @@
     </div>
     <div>
       <label for="origin">豆の産地</label>
-      <input id="origin" name="origin" type="text" [(ngModel)]="beans.origin" #origin="ngModel">
+      <input id="origin" name="origin" type="text" [(ngModel)]="recipe.beans.origin" #origin="ngModel">
     </div>
     <div>
       <label for="shop">購入した店舗</label>
-      <input id="shop" name="shop" type="text" [(ngModel)]="beans.shop" #shop="ngModel">
+      <input id="shop" name="shop" type="text" [(ngModel)]="recipe.beans.shop" #shop="ngModel">
     </div>
     <div>
       <label for="roast">ロースト</label>
-      <input id="roast" name="roast_type" type="text" [(ngModel)]="beans.roast" #roast="ngModel">
+      <input id="roast" name="roast_type" type="text" [(ngModel)]="recipe.beans.roast" #roast="ngModel">
     </div>
     <div>
       <label for="grain">挽き目（粒度）</label>
-      <input id="grain" name="grain_size" type="text" [(ngModel)]="beans.grain" #grain="ngModel">
+      <input id="grain" name="grain_size" type="text" [(ngModel)]="recipe.beans.grain" #grain="ngModel">
     </div>
     <div>
       <label for="beansAmount">豆の量（g）</label>
-      <input id="beansAmount" name="beansAmount" type="text" [(ngModel)]="sytle.beansAmount" #beansAmount="ngModel">
+      <input id="beansAmount" name="beansAmount" type="text" [(ngModel)]="recipe.style.beansAmount" #beansAmount="ngModel">
     </div>
     <div>
       <label for="steamTime">蒸らし時間</label>
-      <input id="steamTime" name="steamTime" type="text" [(ngModel)]="sytle.steamTime" #steamTime="ngModel">
+      <input id="steamTime" name="steamTime" type="text" [(ngModel)]="recipe.style.steamTime" #steamTime="ngModel">
     </div>
     <div>
       <label for="extractionTime">抽出時間</label>
-      <input id="extractionTime" name="extractionTime" type="text" [(ngModel)]="sytle.extractionTime" #extractionTime="ngModel">
+      <input id="extractionTime" name="extractionTime" type="text" [(ngModel)]="recipe.style.extractionTime" #extractionTime="ngModel">
     </div>
     <div>
       <label for="productAmount">コーヒーの量（ml）</label>
-      <input id="productAmount" name="productAmount" type="text" [(ngModel)]="sytle.productAmount" #productAmount="ngModel">
+      <input id="productAmount" name="productAmount" type="text" [(ngModel)]="recipe.style.productAmount" #productAmount="ngModel">
     </div>
     <div>
       <label for="memo">メモ</label>
