一番下のメニューが少し左に寄る問題を修正した

--- a/ClientApp/coffeebook/src/app/component/main/main.component.html
+++ b/ClientApp/coffeebook/src/app/component/main/main.component.html
@@ -26,7 +26,7 @@
         <span>フレンチプレス</span>
       </a>
 
-      <a class="card" routerLink="/under-construction">
+      <a class="card margin-right-none" routerLink="/under-construction">
         <img [src]="srcEspresso" width="48" height="48" alt="エスプレッソマシン">
         <span>エスプレッソ</span>
       </a>
@@ -46,7 +46,7 @@
         <span>条件から探す</span>
       </a>
 
-      <a class="card" routerLink="/under-construction">
+      <a class="card margin-right-none" routerLink="/under-construction">
         <img [src]="srcTeacup" width="48" height="48" alt="コーヒーカップ">
         <span>気分から探す</span>
       </a>
