--- a/ClientApp/coffeebook/src/app/component/succeeded/succeeded.component.scss
+++ b/ClientApp/coffeebook/src/app/component/succeeded/succeeded.component.scss
@@ -44,7 +44,7 @@
   background-color: #fafafa;
   height: 40px;
   width: 200px;
-  margin: 0 8px 16px;
+  margin: 0 0 16px 8px;
   padding: 16px;
   display: flex;
   flex-direction: row;
