--- a/ClientApp/coffeebook/src/app/component/browse/browse.component.scss
+++ b/ClientApp/coffeebook/src/app/component/browse/browse.component.scss
@@ -1,49 +1,25 @@
+@import '../../../styles.scss';
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 8px 0;
-}
-
-.message {
-  text-align: center;
-}
-
-.content {
+.recipe-container {
   display: flex;
-  margin: 32px auto;
-  padding: 0 16px;
-  max-width: 960px;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 2rem;
+  padding: 0;
 }
 
-a,
-a:visited,
-a:hover {
-  // color: burlywood;
-  text-decoration: none;
-}
-
-a:hover {
-  color: brown;
-}
-
-app-tips {
-  position: fixed;
-  bottom: 70px;
-  right: 20px;
-  z-index: 10;
+// app-tips {
+  // position: fixed;
+  // bottom: 70px;
+  // right: 20px;
+  // z-index: 10;
   // width: 1920px;
-}
+// }
 
-svg#clouds {
-  position: fixed;
-  bottom: -160px;
-  left: -230px;
-  z-index: -10;
-  width: 1920px;
-}
+// svg#clouds {
+  // position: fixed;
+  // bottom: -160px;
+  // left: -230px;
+  // z-index: -10;
+  // width: 1920px;
+// }
