メインページのメニューが右に寄る問題を修正した

--- a/ClientApp/coffeebook/src/app/component/main/main.component.scss
+++ b/ClientApp/coffeebook/src/app/component/main/main.component.scss
@@ -14,10 +14,10 @@ a:hover {
   color: #96692F;
 }
 
-app-tips {
+/* app-tips {
   position: relative;
   margin-top: 64px;
   margin-right: 20px;
   z-index: -5;
   box-sizing: content-box;
-}
+} */
