--- a/ClientApp/coffeebook/src/app/component/toolbar/toolbar.component.html
+++ b/ClientApp/coffeebook/src/app/component/toolbar/toolbar.component.html
@@ -1,12 +1,47 @@
-<div class="toolbar" role="banner">
+<!-- <div class="toolbar" role="banner">
   <div class="title">
     <h1 routerLink="/main">Coffeebook</h1>
   </div>
   <div class="spacer"></div>
+  <div>
+    <nav id="global_navigation">
+      <ul>
+        <li>
+          <a routerLink="/under-construction">会員登録</a>
+        </li>
+        <li>
+          <a routerLink="/under-construction">ログイン</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
   <div class="button">
     <input type="button" value="ログイン" onclick="">
   </div>
   <div class="button">
     <input type="button" value="会員登録" onclick="">
   </div>
-</div>
+</div> -->
+
+<mat-toolbar color="primary">
+  <h1 class="title" routerLink="/main">Coffeebook</h1>
+  <span class="spacer"></span>
+  <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="person icon">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu" xPosition="before">
+    <button mat-menu-item [matMenuTriggerFor]="record">しるす</button>
+    <button mat-menu-item [matMenuTriggerFor]="browse">さがす</button>
+    <button mat-menu-item routerLink="/under-construction">ログイン</button>
+    <button mat-menu-item routerLink="/under-construction">会員登録</button>
+  </mat-menu>
+  <mat-menu #record="matMenu" xPosition="before">
+    <button mat-menu-item routerLink="/record/drip">ドリップ</button>
+    <button mat-menu-item routerLink="/under-construction">フレンチプレス</button>
+    <button mat-menu-item routerLink="/under-construction">エスプレッソ</button>
+  </mat-menu>
+  <mat-menu #browse="matMenu" xPosition="before">
+    <button mat-menu-item routerLink="/browse/by-conditions">条件から探す</button>
+    <button mat-menu-item routerLink="/under-construction">気分から探す</button>
+  </mat-menu>
+</mat-toolbar>
