--- a/ClientApp/coffeebook/src/app/component/toolbar/toolbar.component.scss
+++ b/ClientApp/coffeebook/src/app/component/toolbar/toolbar.component.scss
@@ -5,11 +5,12 @@ h1 {
 }
 
 .spacer {
-  flex: 1;
+  flex: 1 1 auto;
 }
 
 .toolbar {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   height: 60px;
   margin: -8px;
@@ -19,10 +20,50 @@ h1 {
 }
 
 .title {
-  padding-left: 1rem;
+  // padding-left: 1rem;
   cursor: pointer;
+  color: white;
 }
 
 .button {
-  margin-right: 1rem;
+  height: 2rem;
+  width: 2rem;
 }
+
+#global_navigation {
+  height: 100%;
+}
+
+#global_navigation ul {
+  list-style-type: none;
+  display: flex;
+  // justify-content: flex-end;
+  // align-items: center;
+  margin: 0 0.6rem;
+  padding: 0;
+  height: 100%;
+  text-align: center;
+
+  li {
+    height: 100%;
+    border-left: 1px solid #ededed;
+  }
+}
+
+#global_navigation ul li a {
+  display: block;
+  // padding: 3px 10px;
+  margin: 0 0.6rem;
+  text-decoration: none;
+  color: black;
+
+  a:hover {
+    text-decoration: underline;
+  }
+}
+
+/* ::ng-deep .mat-icon{
+  height: 2rem !important;
+  width: 2rem !important;
+  font-size: 2rem !important;
+} */
