--- a/ClientApp/coffeebook/src/app/component/under-construction/under-construction.component.scss
+++ b/ClientApp/coffeebook/src/app/component/under-construction/under-construction.component.scss
@@ -10,11 +10,12 @@
 }
 
 .message {
-  margin: 120px auto;
+  // margin: 120px auto;
+  margin-top: 0rem;
   padding: 32px 0;
   text-align: center;
 
   p {
-    font-size: 24px;
+    font-size: 1.2rem;
   }
 }
