登録成功ページのレイアウトをモバイルで違和感のないレイアウトへ改善した

--- a/ClientApp/coffeebook/src/app/component/succeeded/succeeded.component.scss
+++ b/ClientApp/coffeebook/src/app/component/succeeded/succeeded.component.scss
@@ -10,12 +10,13 @@
 }
 
 .message {
-  margin: 120px 0 auto;
+  // margin: 120px 0 auto;
+  margin-top: 0rem;
   padding: 32px 0;
   text-align: center;
 
   p {
-    font-size: 24px;
+    font-size: 1.2rem;
   }
 }
 
